@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Jun 2010; Nikoli <nikoli@lavabit.com> tsmuxer-1.10.6.ebuild,
+  metadata.xml:
+  Add qt4 use flag
+
   09 Jun 2010; Steve Dibb <beandog@gentoo.org> tsmuxer-1.10.6.ebuild:
   Add desktop entry
 
